<resources>
    <string name="app_name">My Calculator</string>
    <string name="button0">0</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="button9">9</string>
    <string name="divide">/</string>
    <string name="button">.</string>
    <string name="plus_minus">+/-</string>
    <string name="equals">=</string>
    <string name="plus">+</string>
    <string name="delete">CE</string>
    <string name="procents">%</string>
    <string name="button8">8</string>
    <string name="multiply">*</string>
    <string name="minus">-</string>
    <string name="resulttext">0</string>
    <string name="settings">Settings</string>
    <string name="nightTheme">Night Theme On</string>
    <string name="offnightTheme">Night Theme Off</string>
    <string name="back">Back</string>



</resources>